write the method body and check that the token is received implement methods for creating, validating and obtaining information from a JWT token

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port:
+port: 8080
 spring:
   application:
     name: demo
@@ -9,9 +9,9 @@ spring:
     password: ${JDBC_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
 
 jwt:
-  secret:
-  expiration:
+  secret: zavyalovegorsergeevich1BIB22066
+  expiration: 3600000
